# face_detector

./: CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/include/: conversions.h  pipeline.h
app/src/: conversions.cpp  main.cpp  pipeline.cpp
common/: CMakeLists.txt
common/include/: control_message.h  histrogram.h  version.h
common/src/: control_message.cpp  version.cpp
detector/: CMakeLists.txt
detector/include/: background.h  camera.h  classifier.h  command.h  component.h  detector.h  engine.h  exception.h  image_db.h  kalman.h  model.h  profiler.h  rail.h  segment.h  stabilizer.h  workflow.h
detector/src/: background.cpp  camera.cpp  classifier.cpp  detector.cpp  engine.cpp  image_db.cpp  kalman.cpp  profiler.cpp  segment.cpp  stabilizer.cpp  workflow.cpp
gui/: CMakeLists.txt
gui/include/: form.h  form.ui  image_list_model.h  pipeline.h  window.h
gui/src/: form.cpp  image_list_model.cpp  window.cpp
test/: CMakeLists.txt
test/src/: test_camera.cpp  test_classifier.cpp  test_detector.cpp  test_face.cpp  test_kalman.cpp  test_rail.cpp  test_segm.cpp
